# cs5490

./: .gitignore  README.md  thrift_build.sh
client_example/: build_interface.sh  test.py
demo_client/: pom.xml  readme
demo_client/src/main/java/cs5490/DemoClient/: App.java  ImagePanel.java  RequestCheck.java  SuccessfulLoginPanel.java
paper/: .gitignore  Makefile  biblio.bib  paper.tex
portal_app/: index.js  package.json
portal_client/: javaconfig.json  pom.xml
portal_client/src/main/java/cs5490/PortalClient/: App.java  RegistrationForm.java
presentation/: Third Party Encrypted Storage.pptx
server/: .gitignore  CMakeLists.txt
server/src/: AuthDB.cxx  AuthDB.h  AuthServeHandler.cxx  AuthServeHandler.h  Globals.h  Log.cxx  Log.h  Utils.cxx  Utils.h  main.cxx
ssl/: server.crt  server.csr  server.key  truststore.jks
thrift/: cs5490.thrift
